fixed Header alignment

--- a/src/views/header/Header.css
+++ b/src/views/header/Header.css
@@ -15,7 +15,7 @@
 .logo {
   align-items: center;
   display: flex;
-  margin-left: -2rem;
+  margin-left: -1.625rem;
 }
 
 .logo h1 {
